# ASSINGMENT03

./: CMakeLists.txt
data/: input.txt  output.txt  textfile10.txt  textfile3.txt  textfile4.txt  textfile5.txt  textfile6.txt  textfile7.txt  textfile9.txt
src/wejulu/: TextAnalysisAppBST.cpp  TextAnalysisBST.h  TextAnalysisImplBST.cpp
